# full-stack-template

./: Makefile  README.md
.github/workflows/: ci.yaml
client/: .dockerignore  .gitignore  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: main.tsx
client/src/components/providers/: theme.tsx
client/src/components/ui/: badge.tsx  calendar.tsx  field.tsx  sidebar.tsx
client/src/routes/: __root.tsx  index.tsx
docker/: docker-compose.yaml
docker/client/: Dockerfile
docker/server/: Dockerfile
server/: .dockerignore  .gitignore  pyproject.toml
server/src/server/: main.py
server/src/server/core/: logger.py  settings.py
server/src/server/infra/api/: router.py
server/static/: swagger.css  swagger.js
server/test/: conftest.py  test_main.py
